default/objects/Map_Member_Lead__c/Map_Member_Lead__c.object-meta.xml
<CustomObject>
    <label>Map Member Lead</label>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>Map Member Lead Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Map Member Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>