default/objects/Map_Member_Lead__c/fields/Influence__c.field-meta.xml
<CustomField>
    <fullName>Influence__c</fullName>
    <label>Influence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Key_Stakeholder_Influence</valueSetName>
    </valueSet>
</CustomField>