default/objects/Map_Member_Lead__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Map Member Leads</relationshipLabel>
    <relationshipName>Map_Member_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>