default/objects/Map_Member_Lead__c/fields/Original_Key_Stakeholder_Lead__c.field-meta.xml
<CustomField>
    <fullName>Original_Key_Stakeholder_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Key Stakeholder Lead</label>
    <referenceTo>Key_Stakeholder_Lead__c</referenceTo>
    <relationshipLabel>Map Member Leads</relationshipLabel>
    <relationshipName>Map_Member_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>